fix display scaling issue on small screens by hiding overflow on the document

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,10 @@
 html {
   color-scheme: dark;
   background-color: #111;
+}
+
+html,
+body {
   overflow: hidden;
 }
 
